      - Fixed an endless loop when calculating error trees in some rare cases.
      - Consider all binary builds (not only selected one) of some source
        package version to be already synchronized with any binary build of
        the related package. Fixes a bug which was present since an initial
        implementation of synchronizing source versions.
    - file:
       - Always set 'close-on-exec' flag for opened file descriptors.
    - config:
      - Recognize 'acquire::cdrom::*' variables.
      - The option is 'cupt::cache::obey-hold' is renamed to
        'cupt::cache::pin::addendums::hold'.
      - New option 'cupt::cache::pin::addendums::not-automatic'.
    - download/manager:
      - Pass the right pointer to setitimer() when disabling SIGALRM. Thanks
        to Jonathan Nieder for the report. (Closes: #619727)
      - Fixed undefined behavior in handling duplicated downloads.
        Fixes a regression introduced in 2.0.0~alpha1.
    - cache:
      - Apply an additional pin priority penalty for not automatic releases.
    - Set of close-on-exec flag changes above Closes: #619650. Thanks to
      Jonathan Nieder for the report and an initial patch set.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 23 Mar 2011 09:59:32 +0200

cupt (2.0.0~beta2) experimental; urgency=low

  * console:
    - Action preview prompt: support 'ProcessTriggers' action.
    - New experimental subcommand 'tar-metadata'.
    - 'showsrc':
      - Output also Uploaders when not empty. Fixes a regression introduced
        in 2.0.0~alpha1.
    - When selecting a version by archive/codename, throw an error if more
      than one matching version is found.
  * lib:
    - cache/binaryversion:
      - 'isInstalled': fixed crash when a version has no sources.
    - system/resolvers/native:
      - Don't attempt to synchronize installed versions, reverting to the
        behavior of cupt 1.x.
      - Optimized solutions' selecting and dropping.