@@ -132,19 +132,18 @@ void ConfigImpl::initializeVariables()
 		{ "cupt::resolver::keep-suggests", "no" },
 		{ "cupt::resolver::max-solution-count", "512" },
 		{ "cupt::resolver::no-remove", "no" },
-		{ "cupt::resolver::quality-bar", "-50" },
 		{ "cupt::resolver::synchronize-source-versions", "none" },
 		{ "cupt::resolver::track-reasons", "no" },
 		{ "cupt::resolver::type", "fair" },
-		{ "cupt::resolver::tune-score::new", "5" },
-		{ "cupt::resolver::tune-score::removal", "400" },
-		{ "cupt::resolver::tune-score::upgrade", "100" },
-		{ "cupt::resolver::tune-score::downgrade", "100" },
-		{ "cupt::resolver::tune-score::position-penalty", "20" },
-		{ "cupt::resolver::tune-score::quality-adjustment", "10" },
-		{ "cupt::resolver::tune-score::failed-recommends", "600" },
-		{ "cupt::resolver::tune-score::failed-suggests", "150" },
-		{ "cupt::resolver::tune-score::failed-synchronization", "200" },
+		{ "cupt::resolver::score::new", "-300" },
+		{ "cupt::resolver::score::removal", "-500" },
+		{ "cupt::resolver::score::upgrade", "100" },
+		{ "cupt::resolver::score::downgrade", "-800" },
+		{ "cupt::resolver::score::position-penalty", "-20" },
+		{ "cupt::resolver::score::quality-adjustment", "0" },
+		{ "cupt::resolver::score::unsatisfied-recommends", "-240" },
+		{ "cupt::resolver::score::unsatisfied-suggests", "-60" },
+		{ "cupt::resolver::score::failed-synchronization", "-80" },
 		{ "cupt::worker::archives-space-limit", "0" },
 		{ "cupt::worker::defer-triggers", "no" },
 		{ "cupt::worker::download-only", "no" },
